# Web_Service_RAG

./: .gitignore  README.md  setup_backend_pyenv.md
Database_conn/: Cargo.toml  README.md  initialisation_test.sql  schema_export.sql  script_clean_from_document.sql
Database_conn/src/: main.rs
POSTGRESQL/: Dockerfile  init-db.sh  podman_starter.md  readme.md  serversetup.md
backend/rust_backend/: RUST_LAMBDA.md
backend/rust_backend/rust_boiler/: package-lock.json  rust_update_metadata.py  serverless.yaml  serverless.yaml.addition
backend/rust_backend/rust_boiler/rust_add_metadata/: Cargo.toml
backend/rust_backend/rust_boiler/rust_add_synonym/: Cargo.toml
backend/rust_backend/rust_boiler/rust_delete_metadata/: Cargo.toml
backend/rust_backend/rust_boiler/rust_document_list/: Cargo.toml
backend/rust_backend/rust_boiler/rust_document_presigned_url/: Readme.md
backend/rust_backend/rust_boiler/rust_dynamo/: Cargo.toml
backend/rust_backend/rust_boiler/rust_file_vectorisation/: Readme.md
backend/rust_backend/rust_boiler/rust_get_chunks/: Cargo.toml
backend/rust_backend/rust_boiler/rust_get_chunks/src/: main.rs
backend/rust_backend/rust_boiler/rust_get_document_metadatas/: Cargo.toml
backend/rust_backend/rust_boiler/rust_get_metadata/: Cargo.toml
backend/rust_backend/rust_boiler/rust_get_metadata/src/: main.rs
backend/rust_backend/rust_boiler/rust_get_recurrent_query/: Cargo.toml
backend/rust_backend/rust_boiler/rust_get_synonym/: Cargo.toml
backend/rust_backend/rust_boiler/rust_hello/: Cargo.toml
backend/rust_backend/rust_boiler/rust_json/: Cargo.toml
backend/rust_backend/rust_boiler/rust_openai_answer/: Cargo.toml
backend/rust_backend/rust_boiler/rust_openai_answer/src/: main.rs
backend/rust_backend/rust_boiler/rust_pdf_file_integration/: Cargo.toml  README_rust_pdf_file_integration.md
backend/rust_backend/rust_boiler/rust_pdf_file_integration/src/: main.rs
backend/rust_backend/rust_boiler/rust_s3_upload_url/: Cargo.toml
backend/rust_backend/rust_boiler/rust_snowflake/: Cargo.toml
backend/rust_backend/rust_boiler/rust_update_synonym/: Cargo.toml
backend/rust_backend/rust_boiler/rust_update_synonym/src/: main.rs  main.rs.old
backend/rust_backend/rust_boiler/rust_update_tags/: Cargo.toml
backend/test/unified/: Error.md  README_pytest.md  readme.md  rust_add_metadata.py  rust_compute_metadata.py  rust_compute_synonym.py  rust_delete_metadata.py  rust_document_presigned_url.py  rust_get_document_metadatas.py  rust_get_metadata.py  rust_metadata.py  rust_openai_answer.py  rust_recurrent_query.py  rust_update_tags.py  test_rust_json.py  test_rust_secret.py
backend/test/unified/event2/: 93c6a0fc-f689-48e4-ac79-55fafd16c873-_EEEEreceipt.json
backend/test/unified/rust_pdf_file_integration/: s3event_rust_integration_pdf_complete.json
documentation/code_rules/: code_rules.md
documentation/deployment/: README_ELASTIC_BEANSTALK.md  RUST_LAMBDA.md  s3_cors.md
documentation/project/: refactoring_rust_secret_journal.md  refactoring_test.md
documentation/prompt_library/: connect_database.md  doc_upload_test.md  refactoring_rust-synonyms.md  refactoring_test.md
documentation/setup/: setup_dev_env.md
frontend_secure/: .env_ex  app_local.py  application.py  requirements.txt
frontend_secure/static/css/: admin_documents.css  debug.css  home.css  metadata.css  missinggroup.css  search.css  settings.css  style.css  welcome.css
frontend_secure/templates/: admin_documents.html  document_search.html  hello_world_debug.html  home.html  metadata.html  missinggroup.html  recurrent_query.html  search.html  settings.html  synonym.html  welcome.html
python_backend/python_boiler/: serverless.yml
python_backend/python_boiler/functions/get_decode_token/: lambda_function.py
rust_backend/: Dockerfile
rust_backend/rust_boiler/: Cargo.toml  package.json  predeployement.py  swagger.yaml
rust_backend/rust_boiler/rust_add_recurrent_query/: Cargo.toml
rust_backend/rust_boiler/rust_add_synonym/src/: main.rs
rust_backend/rust_boiler/rust_cognito/: Cargo.toml
rust_backend/rust_boiler/rust_cognito/src/: main.rs
rust_backend/rust_boiler/rust_compute_metadata/: Cargo.toml
rust_backend/rust_boiler/rust_compute_metadata/src/: main.rs
rust_backend/rust_boiler/rust_compute_synonym/: Cargo.toml
rust_backend/rust_boiler/rust_compute_synonym/src/: main.rs
rust_backend/rust_boiler/rust_delete_metadata/src/: main.rs
rust_backend/rust_boiler/rust_delete_recurrent_query/: Cargo.toml
rust_backend/rust_boiler/rust_delete_recurrent_query/src/: main.rs
rust_backend/rust_boiler/rust_delete_synonym/: Cargo.toml
rust_backend/rust_boiler/rust_delete_synonym/src/: main.rs
rust_backend/rust_boiler/rust_document_list/src/: main.rs
rust_backend/rust_boiler/rust_document_presigned_url/: Cargo.toml
rust_backend/rust_boiler/rust_file_vectorisation/: Cargo.toml
rust_backend/rust_boiler/rust_get_document_metadatas/src/: main.rs
rust_backend/rust_boiler/rust_get_recurrent_query/src/: main.rs
rust_backend/rust_boiler/rust_get_synonym/src/: main.rs.old
rust_backend/rust_boiler/rust_hello/src/: main.rs
rust_backend/rust_boiler/rust_json/src/: payload_schema.json
rust_backend/rust_boiler/rust_pdf_file_integration/: test_integration.py
rust_backend/rust_boiler/rust_s3_upload_url/src/: main.rs
rust_backend/rust_boiler/rust_secret/: Cargo.toml
rust_backend/rust_boiler/rust_secret/src/: main.rs
rust_backend/rust_boiler/rust_update_metadata/: Cargo.toml
rust_backend/rust_boiler/rust_update_metadata/src/: main.rs
rust_backend/rust_boiler/rust_update_recurrent_query/: Cargo.toml
rust_backend/rust_boiler/rust_update_tags/src/: main.rs
test/unified/: LAMBDA_TESTING_README.md  rust_document_list.py  rust_document_upload_chain.py  rust_get_chunks.py  rust_s3_upload_url.py  rust_snowflake.py  rust_update_metadata.py  shared_function.py  test_rust_cognito.py  test_rust_dynamo.py  test_rust_hello.py  test_rust_synonyms.py
test/unified/rust_file_vectorisation/: file_vectorisation.json
(+20 files in other folders)
