[package]
name = "rust_tokio_postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.13" }
openssl = "0.10"
postgres-native-tls = "0.5.1"
native-tls = "0.2"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
async-trait = "0.1"
dotenv_codegen = "0.15"
futures = "0.3"