[package]
name = "rust_add_recurrent_query"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.8.0"
lambda_runtime = "0.8.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
postgres-native-tls = "0.5.0"
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4"] }
native-tls = "0.2.10"
aws-config = "0.55.0"
aws-sdk-secretsmanager = "0.26.0"
dotenv = "0.15.0"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
jsonwebtokens-cognito = "0.1.0"