[package]
name = "rust_compute_metadata"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = { version = "0.8.1", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.8.1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
serde = "1.0.136"
serde_json = "1.0.79"
postgres-native-tls = "0.5.0"
native-tls = "0.2"
tokio-postgres = { version = "0.7.5", features = ["with-uuid-0_8", "with-serde_json-1", "with-chrono-0_4"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
aws-config = "0.55.2"
aws-sdk-secretsmanager = "0.27.0"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtokens-cognito = "0.1.1"
reqwest = { version = "0.11", features = ["json"] }