[package]
name = "rust_delete_recurrent_query"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.8.1"
lambda_runtime = "0.8.1"
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
chrono = { version = "0.4.19", features = ["serde"] }
jsonwebtokens-cognito = "0.1.1"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
native-tls = "0.2.8"
aws-config = "0.55.2"
aws-sdk-secretsmanager = "0.27.0"
tokio-postgres = { version = "0.7.6", features = ["with-chrono-0_4"] }
postgres-native-tls = "0.5.0"