[package]
name = "rust_document_presigned_url"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.8.1"
lambda_runtime = "0.8.1"
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
jsonwebtokens-cognito = "0.1.1"
chrono = { version = "0.4.26", features = ["serde"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
aws-config = "0.56.1"
aws-sdk-secretsmanager = "0.29.0"
aws-sdk-s3 = "0.30.0"
tokio-postgres = { version = "0.7.8", features = ["with-chrono-0_4"] }
postgres-native-tls = "0.5.0"
native-tls = "0.2.11"

