[package]
name = "rust_file_vectorisation"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.8.3"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
serde_derive = "1.0"
aws-config = "0.56.1"
aws-sdk-s3 = "0.33.0"
aws-sdk-secretsmanager = "0.33.0"
aws_lambda_events = { version = "0.8.3", default-features = false, features = ["s3"] }
chrono = "0.4.31"
env_logger = "0.10.0"
log = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
md5 = "0.7.0"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1"] }
postgres-native-tls = "0.5"
native-tls = "0.2"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
percent-encoding = "2.3.0"
bytes = "1.4.0"
