[package]
name = "rust_secret"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.8.3"
lambda_runtime = "0.8.3"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
openssl = { version = "0.10", features = ["vendored"] }
aws-config = "1.1.4"
aws-sdk-secretsmanager = "1.14.0"
clap = "4.4.18"
structopt = "0.3.26"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

