[package]
name = "rust_document_list"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
current_platform = "0.2.0"
lambda_http = "0.8.3"
lambda_runtime = "0.8.3"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
jsonschema = "0.18.0"
serde_json = "1.0.113"
chrono = { version = "0.4", features = ["serde"] }

# Token verification
jsonwebtokens-cognito = "0.1.1"

# POSTGRES CONNECTION
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
openssl = "0.10"
postgres-native-tls = "0.5.1"
native-tls = "0.2"

# AWS CLIENT
aws-config = "1.5.17"
aws-sdk-secretsmanager = "1.64.0"




