[package]
name = "rust_get_document_metadatas"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = { version = "0.8.1", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.8.1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
native-tls = "0.2"
postgres-native-tls = "0.5"
aws-config = "0.54"
aws-sdk-secretsmanager = "0.24"
aws-types = "0.54"
