[package]
name = "rust_openai_answer"
version = "0.1.0"
edition = "2021"

[dependencies]
current_platform = "0.2.0"
lambda_http = "0.8.3"
lambda_runtime = "0.8.3"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
jsonschema = "0.18.0"
serde_json = "1.0.113"
aws-config = "1.5.17"
aws-sdk-secretsmanager = "1.64.0"

# FOR OPEN AI
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
