[package]
name = "rust_pdf_file_integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.1"
aws-sdk-s3 = "0.28.0"
aws-sdk-lambda = "0.28.0"
aws-sdk-secretsmanager = "0.28.0" 
aws_lambda_events = { version = "0.8.3", default-features = false, features = ["s3"] }
lambda_runtime = "0.8.0"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.96"
anyhow = "1.0.71"
chrono = { version = "0.4.26", features = ["serde"] }
log = "0.4.19"
env_logger = "0.10.0"
uuid = { version = "1.3.4", features = ["v4", "serde"] }
md-5 = "0.10.5"
hex = "0.4.3"
base64 = "0.21.0"

# PostgreSQL dependencies
tokio-postgres = { version = "0.7.8", features = ["with-chrono-0_4", "with-uuid-1"] }
postgres-native-tls = "0.5.0"
native-tls = "0.2.11"

# PDF processing
pdf-extract = "0.7.1"

# URL encoding/decoding
percent-encoding = "2.2.0"

# HTTP and Lambda HTTP
http = "0.2.9"
lambda_http = "0.8.0"
