[package]
name = "rust_update_synonym"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = { version = "0.8.1", features = ["apigw_rest"] }
lambda_runtime = "0.8.1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postgres-native-tls = "0.5.0"
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4"] }
native-tls = "0.2.11"
aws-config = "0.55.3"
aws-sdk-secretsmanager = "0.28.0"
chrono = { version = "0.4.26", features = ["serde"] }
jsonwebtokens-cognito = "0.1.1"